# resistor

./: .gitignore  CMakeLists.config  CMakeLists.txt  README.de-at.md  README.md  resistor.cpp  resistor.hpp  resistor_test.cpp
